examples/test/testpolicy17407.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17407
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key44: value6
      key8: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value13
          key39: value43
      podSelector:
        matchLabels:
          key19: value4
          key33: value4
